<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Details_screen"
    android:id="@+id/detailsView">

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/TopIV"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/centerIV"
                android:layout_width="135dp"
                android:layout_height="160dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/coopbl"
                    android:text="@string/title"
                    android:textColor="@color/Purple"
                    android:paddingTop="@dimen/topPadding"
                    android:textSize="@dimen/titleSize" />

                <TextView
                    android:id="@+id/released"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/released"
                    android:textColor="@color/Black"
                    android:paddingTop="@dimen/topPadding"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/movie_trailer"
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:background="@color/Purple"
                    android:shadowColor="@color/Blue"
                    android:text="@string/movie_trailer"
                    android:textColor="@color/White"
                    android:textStyle="bold"
                    android:layout_gravity="bottom"
                    />
                    <!--android:onClick="OpenLink"-->



                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/topPadding"
                    android:layout_gravity="bottom" />

            </LinearLayout>
        </LinearLayout>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/textPadding"
                    android:text="@string/overview"
                    android:textColor="@color/Black"/>

                <TextView
                    android:id="@+id/intro"
                    android:paddingLeft="@dimen/textPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>