<!-- fragment_screen_slide_page.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieDetailActivity">

        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:layout_alignTop="@+id/pager"
            android:layout_alignBottom="@+id/pager"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">


            <ImageView
                android:id="@+id/TopIV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/jursic_large"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/centerIV"
                    android:layout_width="135dp"
                    android:layout_height="160dp"
                    app:srcCompat="@drawable/jurassic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/topPadding"
                        android:text="@string/title"
                        android:textColor="@color/Purple"
                        android:textSize="@dimen/titleSize"
                        app:fontFamily="@font/coopbl" />

                    <TextView
                        android:id="@+id/released"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/topPadding"
                        android:text="@string/released"
                        android:textColor="@color/Black"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_movie_trailer"
                        android:layout_width="155dp"
                        android:layout_height="34dp"
                        android:layout_gravity="bottom"
                        android:background="@color/Purple"
                        android:shadowColor="@color/Blue"
                        android:text="@string/movie_trailer"
                        android:textColor="@color/White"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingTop="@dimen/topPadding" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/textPadding"
                android:text="@string/overview"
                android:textColor="@color/Black"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="343dp">

                <TextView
                    android:id="@+id/intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/textPadding"
                    android:text="@string/intro"></TextView>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>